--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_URL = mongodb+srv://newuser12:admin123@userauth.y7s9n6k.mongodb.net/user
-NEXTAUTH_SECRET = "nextauthcredproject"
+DB_URL = 
+NEXTAUTH_SECRET = ""
